--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -195,6 +195,10 @@ PROP_modules_reloadable=Reloadable
 HINT_modules_reloadable=If True, you can reload this module without restarting the IDE.
 PROP_modules_autoload=Autoloaded
 HINT_modules_autoload=If True, this module is turned on and off as needed.
+PROP_modules_eager=Eager
+HINT_modules_eager=If True, this module is turned on whenever it can be turned on.
+PROP_modules_provides=Provides
+HINT_modules_provides=Named capabilities this module provides to others.
 #MSG_UninstallOthers=Some modules depend on this module. When this module is uninstalled,\n\
 #                    the following modules will also be uninstalled or disabled:
 #MSG_DisableOthers=Some modules depend on this module. When this module is uninstalled,\n\
@@ -214,6 +218,7 @@ LBL_ModuleNode_SORT_ENABLED=By Enabled Status
 LBL_ModuleNode_SORT_URL=By JAR File
 LBL_ModuleNode_SORT_CATEGORY=By Category
 LBL_ModuleNode_libraries=Libraries
+LBL_ModuleNode_bridges=Bridges
 # ADD module
 #CTL_ModuleURL=URL of the Module
 #CTL_AddModule=Add New Module
