--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/Bundle.properties
@@ -13,4 +13,4 @@
 ## Lib.java
 TEXT_new_attribute_name=attribute
 TEXT_new_attribute_value=attribute value
-TITLE_new_attribute=New attribute
+TITLE_new_attribute=Add Attribute
