touch-ups of mount catalog dialog

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -11,7 +11,7 @@
 
 
 ## SystemCatalogCustomizer.java
-SystemCatalogCustomizer.readOnly.text=This is Netbeans IDE system catalog. \u000ARead-only for users. It can be manipulated just by modules.
+SystemCatalogCustomizer.readOnly.text=This is the Netbeans IDE system catalog. \u000AUsers have read-only access. It can be manipulated only by modules.
 ACSD_SystemCatalogCustomizer=Customizer for Netbeans IDE catalog
 
 ## SystemCatalogReaderBeanInfo.java
@@ -24,13 +24,12 @@ PROP_display_name=XML Catalog at {0}
 
 ## XCatalogBeanInfo.java
 NAME_x_catalog=XML Catalog
-TEXT_x_catalog_desc=Multi-version implementation supporting XCatalog v0.2 and XMLCatalog v0.4.
+TEXT_x_catalog_desc=Multiversion support of XCatalog v0.2 and XMLCatalog v0.4.
 
 ## XCatalogCustomizer.java
 ACSD_XCatalogCustomizer=Customizer for XML Catalog reader. Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
-DESC_xcatalog_fmts=Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
+DESC_xcatalog_fmts=Recognizes XCatalog v0.2 and XMLCatalog v0.4 (deprecated catalog formats). Use OASIS XML Catalog format for new catalogs.
 
 XCatalogCustomizer.locationLabel.mne=U
 XCatalogCustomizer.locationLabel.text=XML Catalog URL:
 ACSD_locationTextField=n/a
-
