#19684 more descriptive tooltips.

--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/Bundle.properties
@@ -15,13 +15,13 @@ ACSD_addButton=n/a
 ACSD_upButton=n/a
 ACSD_removeButton=n/a
 ACSD_attrTable=n/a
-ACSN_attrTable=n/a
+ACSN_attrTable=Table of attributes
 ACSD_downButton=n/a
 
 # a11y - TreeAttlistDeclAttributeListCustomizer
 ACSD_TreeAttlistDeclAttributeListCustomizer=n/a
 ACSD_attrTable1=n/a
-ACSN_attrTable1=n/a
+ACSN_attrTable1=Table of attribute declarations
 
 ## a11y - NullStringCustomEditor
 ACSD_NullStringCustomEditor=n/a
@@ -34,7 +34,7 @@ ACSD_rejectRadioButton=n/a
 ACSD_addButton1=n/a
 ACSD_removeButton1=n/a
 ACSD_nodeTypesTable=n/a
-ACSN_nodeTypesTable=n/a
+ACSN_nodeTypesTable=Table of filter rules
 
 
 ## NullStringEditor.java
