--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/beaninfo/Bundle.properties
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/beaninfo/Bundle.properties
@@ -12,21 +12,21 @@
 
 ## TreeAttlistDeclAttributeDefBeanInfo.java
 PROP_TreeAttlistDeclAttributeDefBeanInfo_name=Name
-HINT_TreeAttlistDeclAttributeDefBeanInfo_name=Name
+HINT_TreeAttlistDeclAttributeDefBeanInfo_name=Attribute declaration name
 PROP_TreeAttlistDeclAttributeDefBeanInfo_defaultValue=Default Value
-HINT_TreeAttlistDeclAttributeDefBeanInfo_defaultValue=Default value
+HINT_TreeAttlistDeclAttributeDefBeanInfo_defaultValue=Default value if attribute ommited
 PROP_TreeAttlistDeclAttributeDefBeanInfo_readOnly=Read Only
 HINT_TreeAttlistDeclAttributeDefBeanInfo_readOnly=Is this node read only?
 PROP_TreeAttlistDeclAttributeDefBeanInfo_type=Type
-HINT_TreeAttlistDeclAttributeDefBeanInfo_type=Type
+HINT_TreeAttlistDeclAttributeDefBeanInfo_type=Declared attribute type e.g. CDATA
 PROP_TreeAttlistDeclAttributeDefBeanInfo_defaultType=Default Type
-HINT_TreeAttlistDeclAttributeDefBeanInfo_defaultType=Default type
+HINT_TreeAttlistDeclAttributeDefBeanInfo_defaultType=Default value type
 PROP_TreeAttlistDeclAttributeDefBeanInfo_enumeratedType=Enumerated Type
-HINT_TreeAttlistDeclAttributeDefBeanInfo_enumeratedType=Enumerated type
+HINT_TreeAttlistDeclAttributeDefBeanInfo_enumeratedType=Attribute can have one of enumerated values.
 
 ## TreeAttlistDeclBeanInfo.java
 PROP_TreeAttlistDeclBeanInfo_elementName=Element Name
-HINT_TreeAttlistDeclBeanInfo_elementName=Element name
+HINT_TreeAttlistDeclBeanInfo_elementName=Fully qualified element name
 PROP_TreeAttlistDeclBeanInfo_readOnly=Read Only
 HINT_TreeAttlistDeclBeanInfo_readOnly=Is this node read only?
 PROP_TreeAttlistDeclBeanInfo_attributeDefs=Attribute Defs
@@ -36,125 +36,125 @@ HINT_TreeAttlistDeclBeanInfo_attributeDefs=Attribute definitions
 PROP_TreeAttributeBeanInfo_readOnly=Read only
 HINT_TreeAttributeBeanInfo_readOnly=Is this node read only?
 PROP_TreeAttributeBeanInfo_QName=Qualified Name
-HINT_TreeAttributeBeanInfo_QName=Fully qualified name
+HINT_TreeAttributeBeanInfo_QName=Fully qualified attribute name
 PROP_TreeAttributeBeanInfo_value=Value
-HINT_TreeAttributeBeanInfo_value=Value
+HINT_TreeAttributeBeanInfo_value=Attribute value
 PROP_TreeAttributeBeanInfo_namespacePrefix=Namespace Prefix
-HINT_TreeAttributeBeanInfo_namespacePrefix=Namespace prefix
+HINT_TreeAttributeBeanInfo_namespacePrefix=Attribute name namespace prefix
 PROP_TreeAttributeBeanInfo_localName=Local Name
-HINT_TreeAttributeBeanInfo_localName=Local name
+HINT_TreeAttributeBeanInfo_localName=Local attribute name
 PROP_TreeAttributeBeanInfo_specified=Specified
-HINT_TreeAttributeBeanInfo_specified=Specified
+HINT_TreeAttributeBeanInfo_specified=Specified if False, it is missing default value used.
 
 ## TreeCDATASectionBeanInfo.java
 PROP_TreeCDATASectionBeanInfo_readOnly=Read Only
 HINT_TreeCDATASectionBeanInfo_readOnly=Is this node read only?
 PROP_TreeCDATASectionBeanInfo_data=Data
-HINT_TreeCDATASectionBeanInfo_data=Data
+HINT_TreeCDATASectionBeanInfo_data=CDATA section text
 PROP_TreeCDATASectionBeanInfo_length=Length
 HINT_TreeCDATASectionBeanInfo_length=Length of data
 
 ## TreeCharacterReferenceBeanInfo.java
 PROP_TreeCharacterReferenceBeanInfo_name=Name
-HINT_TreeCharacterReferenceBeanInfo_name=Name
-PROP_TreeCharacterReferenceBeanInfo_data=Data
-HINT_TreeCharacterReferenceBeanInfo_data=Data
+HINT_TreeCharacterReferenceBeanInfo_name=Character reference name
+PROP_TreeCharacterReferenceBeanInfo_data=Character
+HINT_TreeCharacterReferenceBeanInfo_data=Referenced character
 PROP_TreeCharacterReferenceBeanInfo_readOnly=Read Only
 HINT_TreeCharacterReferenceBeanInfo_readOnly=Is this node read only?
 
 ## TreeCommentBeanInfo.java
 PROP_TreeCommentBeanInfo_readOnly=Read Only
 HINT_TreeCommentBeanInfo_readOnly=Is this node read only?
-PROP_TreeCommentBeanInfo_data=Data
-HINT_TreeCommentBeanInfo_data=Data
+PROP_TreeCommentBeanInfo_data=Comment
+HINT_TreeCommentBeanInfo_data=Comment text
 PROP_TreeCommentBeanInfo_length=Length
-HINT_TreeCommentBeanInfo_length=Length of data
+HINT_TreeCommentBeanInfo_length=Length of comment text
 
 ## TreeConditionalSectionBeanInfo.java
 PROP_TreeConditionalSectionBeanInfo_ignoredContent=Ignored Content
-HINT_TreeConditionalSectionBeanInfo_ignoredContent=Ignored content
+HINT_TreeConditionalSectionBeanInfo_ignoredContent=Ignored condition section text
 PROP_TreeConditionalSectionBeanInfo_readOnly=Read Only
 HINT_TreeConditionalSectionBeanInfo_readOnly=Is this node read only?
 PROP_TreeConditionalSectionBeanInfo_include=Include
-HINT_TreeConditionalSectionBeanInfo_include=Include
+HINT_TreeConditionalSectionBeanInfo_include=Include if True
 
 ## TreeDTDBeanInfo.java
 PROP_TreeDTDBeanInfo_encoding=Encoding
-HINT_TreeDTDBeanInfo_encoding=Encoding
+HINT_TreeDTDBeanInfo_encoding=Encoding declared in header
 PROP_TreeDTDBeanInfo_readOnly=Read Only
 HINT_TreeDTDBeanInfo_readOnly=Is this node read only?
 PROP_TreeDTDBeanInfo_version=Version
-HINT_TreeDTDBeanInfo_version=Version
+HINT_TreeDTDBeanInfo_version=Version declared in header
 
 ## TreeDocumentBeanInfo.java
 PROP_TreeDocumentBeanInfo_encoding=Encoding
-HINT_TreeDocumentBeanInfo_encoding=Encoding
+HINT_TreeDocumentBeanInfo_encoding=Encoding declared in header
 PROP_TreeDocumentBeanInfo_readOnly=Read Only
 HINT_TreeDocumentBeanInfo_readOnly=Is this node read only?
 PROP_TreeDocumentBeanInfo_version=Version
-HINT_TreeDocumentBeanInfo_version=Version
+HINT_TreeDocumentBeanInfo_version=Version declared in header
 PROP_TreeDocumentBeanInfo_standalone=Standalone
-HINT_TreeDocumentBeanInfo_standalone=Standalone
+HINT_TreeDocumentBeanInfo_standalone=If standalone no external entities are used.
 
 ## TreeDocumentFragmentBeanInfo.java
 PROP_TreeDocumentFragmentBeanInfo_readOnly=Read Only
 HINT_TreeDocumentFragmentBeanInfo_readOnly=Is this node read only?
 PROP_TreeDocumentFragmentBeanInfo_encoding=Encoding
-HINT_TreeDocumentFragmentBeanInfo_encoding=Encoding
+HINT_TreeDocumentFragmentBeanInfo_encoding=Encoding declaration
 PROP_TreeDocumentFragmentBeanInfo_version=Version
-HINT_TreeDocumentFragmentBeanInfo_version=Version
+HINT_TreeDocumentFragmentBeanInfo_version=Version declaration
 
 ## TreeDocumentTypeBeanInfo.java
 PROP_TreeDocumentTypeBeanInfo_publicId=Public ID
-HINT_TreeDocumentTypeBeanInfo_publicId=Public ID
+HINT_TreeDocumentTypeBeanInfo_publicId=DTD entity public ID
 PROP_TreeDocumentTypeBeanInfo_readOnly=Read Only
 HINT_TreeDocumentTypeBeanInfo_readOnly=Is this node read only?
 PROP_TreeDocumentTypeBeanInfo_systemId=System ID
-HINT_TreeDocumentTypeBeanInfo_systemId=System ID
+HINT_TreeDocumentTypeBeanInfo_systemId=DTD entity system ID
 PROP_TreeDocumentTypeBeanInfo_elementName=Element Name
-HINT_TreeDocumentTypeBeanInfo_elementName=Element name
+HINT_TreeDocumentTypeBeanInfo_elementName=Fully qualified element name
 
 ## TreeElementBeanInfo.java
 PROP_TreeElementBeanInfo_readOnly=Read Only
 HINT_TreeElementBeanInfo_readOnly=Is this node read only?
 PROP_TreeElementBeanInfo_attributes=Attributes
-HINT_TreeElementBeanInfo_attributes=Attributes
+HINT_TreeElementBeanInfo_attributes=Attribute set
 PROP_TreeElementBeanInfo_QName=Qualified Name
-HINT_TreeElementBeanInfo_QName=Fully qualified name
+HINT_TreeElementBeanInfo_QName=Fully qualified element name
 PROP_TreeElementBeanInfo_localName=Local Name
-HINT_TreeElementBeanInfo_localName=Local name
+HINT_TreeElementBeanInfo_localName=Local element name
 PROP_TreeElementBeanInfo_namespacePrefix=Namespace Prefix
-HINT_TreeElementBeanInfo_namespacePrefix=Namespace prefix
+HINT_TreeElementBeanInfo_namespacePrefix=Element name namespace prefix
 
 ## TreeElementDeclBeanInfo.java
 PROP_TreeElementDeclBeanInfo_name=Name
-HINT_TreeElementDeclBeanInfo_name=Name
+HINT_TreeElementDeclBeanInfo_name=Fully qualified element name
 PROP_TreeElementDeclBeanInfo_readOnly=Read Only
 HINT_TreeElementDeclBeanInfo_readOnly=Is this node read only?
 PROP_TreeElementDeclBeanInfo_contentType=Content Type
-HINT_TreeElementDeclBeanInfo_contentType=Content type
+HINT_TreeElementDeclBeanInfo_contentType=Element content model description
 
 ## TreeEntityDeclBeanInfo.java
 PROP_TreeEntityDeclBeanInfo_name=Name
-HINT_TreeEntityDeclBeanInfo_name=Name
+HINT_TreeEntityDeclBeanInfo_name=Entity name
 PROP_TreeEntityDeclBeanInfo_parameter=Parameter
-HINT_TreeEntityDeclBeanInfo_parameter=Parameter
+HINT_TreeEntityDeclBeanInfo_parameter=True for parameter entities
 PROP_TreeEntityDeclBeanInfo_notationName=Notation Name
-HINT_TreeEntityDeclBeanInfo_notationName=Notation name
+HINT_TreeEntityDeclBeanInfo_notationName=Unparsed external entity notation name
 PROP_TreeEntityDeclBeanInfo_systemId=System ID
-HINT_TreeEntityDeclBeanInfo_systemId=System ID
+HINT_TreeEntityDeclBeanInfo_systemId=External entity system ID
 PROP_TreeEntityDeclBeanInfo_readOnly=Read Only
 HINT_TreeEntityDeclBeanInfo_readOnly=Is this node read only?
 PROP_TreeEntityDeclBeanInfo_internalText=Internal Text
-HINT_TreeEntityDeclBeanInfo_internalText=Internal text
+HINT_TreeEntityDeclBeanInfo_internalText=Internal entity text
 PROP_TreeEntityDeclBeanInfo_publicId=Public ID
-HINT_TreeEntityDeclBeanInfo_publicId=Public ID
+HINT_TreeEntityDeclBeanInfo_publicId=Extarnal entity public ID
 PROP_TreeEntityDeclBeanInfo_type=Type
-HINT_TreeEntityDeclBeanInfo_type=Type
+HINT_TreeEntityDeclBeanInfo_type=Entity type
 
 ## TreeGeneralEntityReferenceBeanInfo.java
 PROP_TreeGeneralEntityReferenceBeanInfo_name=Name
-HINT_TreeGeneralEntityReferenceBeanInfo_name=Name
+HINT_TreeGeneralEntityReferenceBeanInfo_name=Entity reference name
 PROP_TreeGeneralEntityReferenceBeanInfo_readOnly=Read Only
 HINT_TreeGeneralEntityReferenceBeanInfo_readOnly=Is this node read only?
 
@@ -164,34 +164,34 @@ HINT_TreeNodeFilter=Filter which could be applied in Node View Types
 
 ## TreeNotationDeclBeanInfo.java
 PROP_TreeNotationDeclBeanInfo_systemId=System ID
-HINT_TreeNotationDeclBeanInfo_systemId=System ID
+HINT_TreeNotationDeclBeanInfo_systemId=Notation system ID
 PROP_TreeNotationDeclBeanInfo_name=Name
-HINT_TreeNotationDeclBeanInfo_name=Name
+HINT_TreeNotationDeclBeanInfo_name=NAotation name
 PROP_TreeNotationDeclBeanInfo_readOnly=Read Only
 HINT_TreeNotationDeclBeanInfo_readOnly=Is this node read only?
 PROP_TreeNotationDeclBeanInfo_publicId=Public ID
-HINT_TreeNotationDeclBeanInfo_publicId=Public ID
+HINT_TreeNotationDeclBeanInfo_publicId=Notation public ID
 
 ## TreeParameterEntityReferenceBeanInfo.java
 PROP_TreeParameterEntityReferenceBeanInfo_name=Name
-HINT_TreeParameterEntityReferenceBeanInfo_name=Name
+HINT_TreeParameterEntityReferenceBeanInfo_name=Parameter entity reference name
 PROP_TreeParameterEntityReferenceBeanInfo_readOnly=Read Only
 HINT_TreeParameterEntityReferenceBeanInfo_readOnly=Is this node read only?
 
 ## TreeProcessingInstructionBeanInfo.java
 PROP_TreeProcessingInstructionBeanInfo_target=Target
-HINT_TreeProcessingInstructionBeanInfo_target=Target
+HINT_TreeProcessingInstructionBeanInfo_target=Processing instruction target
 PROP_TreeProcessingInstructionBeanInfo_readOnly=Read Only
 HINT_TreeProcessingInstructionBeanInfo_readOnly=Is this node read only?
 PROP_TreeProcessingInstructionBeanInfo_data=Data
-HINT_TreeProcessingInstructionBeanInfo_data=Data
+HINT_TreeProcessingInstructionBeanInfo_data=Processing instruction data
 PROP_TreeProcessingInstructionBeanInfo_length=Length
-HINT_TreeProcessingInstructionBeanInfo_length=Length of Data
+HINT_TreeProcessingInstructionBeanInfo_length=Length of processing instruction data
 
 ## TreeTextBeanInfo.java
 PROP_TreeTextBeanInfo_readOnly=Read Only
 HINT_TreeTextBeanInfo_readOnly=Is this node read only?
 PROP_TreeTextBeanInfo_data=Data
-HINT_TreeTextBeanInfo_data=Data
+HINT_TreeTextBeanInfo_data=Element content text
 PROP_TreeTextBeanInfo_length=Length
-HINT_TreeTextBeanInfo_length=Length of data
+HINT_TreeTextBeanInfo_length=Length of element content text
