touch-up of mount catalog dialog

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -10,12 +10,12 @@
 # Microsystems, Inc. All Rights Reserved.
 
 ## CatalogCustomizer.java
-ACSD_CatalogCustomizer=Customizer for Sun's implementation of OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
-DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and TR9401 (XML related part only).
+ACSD_CatalogCustomizer=Customizer for Sun's implementation of OASIS XML Catalog, XCatalog v0.2 and XML-related sections of TR9401.
+DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and XML-related sections of TR9401.
 
 LBL_preference=Prefer Public
 MNE_preference=P
-ACSD_preference=Prefer public ID over system ones during resolution?
+ACSD_preference=Prefer public IDs over system IDs during entity resolution?
 
 CatalogCustomizer.locationLabel.text=Catalog URL:
 CatalogCustomizer.locationLabel.mne=U
@@ -24,8 +24,7 @@ ACSD_locationTextField=URL pointing to the catalog file
 PROP_choose_file=File...
 MNE_file=F
 ACSD_file=Button selecting local file
-HINT_pp=Prefer public mappings over system ones.
-
+HINT_pp=Prefer public mappings over system mappings.
 
 
 ## Catalog.java
