--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -31,6 +31,7 @@ CatalogMounterPanel.catalogLabel.mne=T
 CatalogMounterPanel.catalogLabel.text=Catalog Type:
 ACSD_catalogComboBox=n/a
 ACSD_CatalogMounterPanel=Panel for selecting catalog providers showing customizer for selected one.
+ACSN_CatalogMounterPanel=Entity catalog mounter
 
 ## CatalogRootNode.java
 TEXT_catalog_root=XML Entity Catalogs
