--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -21,7 +21,7 @@ CatalogCustomizer.locationLabel.text=Catalog URL:
 CatalogCustomizer.locationLabel.mne=U
 ACSD_locationTextField=URL pointing to the catalog file
 
-PROP_choose_file=File...
+PROP_choose_file=Browse...
 MNE_file=F
 ACSD_file=Button selecting local file
 HINT_pp=Prefer public mappings over system mappings.
