Added comparison of interned and noninterned bundle parsing, try it with ant test -Dtests.specs=org.netbeans.performance.bundle.PropertiesTest -Dtests.output=report/properties.xml

--- a/performance/test/perf/build.xml
+++ b/performance/test/perf/build.xml
@@ -76,7 +76,7 @@ Microsystems, Inc. All Rights Reserved.
         <property name="tests.specs" value=""/>
     </target>
 
-    <target name="prop_output_init" unless="${tests.specs}">
+    <target name="prop_output_init" unless="${tests.output}">
         <property name="tests.output" value="report/all.xml"/>
     </target>
 
