BeanInfo added to be able to customize it. Serializable added for persistent storage.

--- a/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/cmdline/Bundle.properties
@@ -12,3 +12,6 @@
 displayName=Command Line Diff
 shortDescription=
 runtimeError=The diff command ''{0}'' failed to execute in the system.
+
+PROP_diffCmd=The Diff Command
+HINT_diffCmd=The command, that will be executed to get the differences.
