Warn if there is missing visualizer or provider.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -38,5 +38,8 @@ CTL_DiffActionName=Diff
 
 MSG_NoDifferenceInFile=No differences were found between {0} and {1}.
 MSG_DiffFailed=Diff failed for {0} and {1}.
-CTL_DiffTitleFile=Diff: {0} - {1}
+#CTL_DiffTitleFile=Diff: {0} - {1}
+
+MSG_NoDiffVisualizer=No Diff Visualizer is registered in the system.
+MSG_NoDiffProvider=No Diff Provider is registered in the system.
 
