#14722: possibility to use META-INF/services/class.Name in Lookup.

--- a/o.n.core/test/unit/src/org/netbeans/core/lookup/data/build.xml
+++ b/o.n.core/test/unit/src/org/netbeans/core/lookup/data/build.xml
@@ -8,12 +8,12 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 <project basedir="." default="all">
 
-    <target name="all" depends="test1,test2"/>
+    <target name="all" depends="test1,test2,services1,services2"/>
 
     <target name="test1">
         <javac srcdir="test1-src" destdir="test1-src"/>
@@ -28,11 +28,25 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="test2-src"/>
         </jar>
     </target>
+    
+    <target name="services1">
+        <javac srcdir="services-jar-1" destdir="services-jar-1"/>
+        <jar jarfile="services-jar-1.jar" manifest="services-jar-1.mf">
+            <fileset dir="services-jar-1"/>
+        </jar>
+    </target>
+
+    <target name="services2" depends="services1">
+        <javac srcdir="services-jar-2" destdir="services-jar-2" classpath="services-jar-1.jar"/>
+        <jar jarfile="services-jar-2.jar" manifest="services-jar-2.mf">
+            <fileset dir="services-jar-2"/>
+        </jar>
+    </target>
 
     <target name="clean">
         <delete>
             <fileset dir=".">
-                <include name="*src/**/*.class"/>
+                <include name="**/*.class"/>
                 <include name="*.jar"/>
             </fileset>
         </delete>
