--- a/openide/test/build.xml
+++ b/openide/test/build.xml
@@ -242,6 +242,10 @@ Microsystems, Inc. All Rights Reserved.
  	      -->
                 <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../netbeans/lib/openide.jar"/>
+                <fileset dir="../../core/netbeans/lib">
+            		<include name="core.jar"/>
+            		<include name="ext/*.jar"/>
+                </fileset>             
 	</path>
     </target>
         
@@ -256,6 +260,10 @@ Microsystems, Inc. All Rights Reserved.
  	      -->
                 <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../src/"/>
+                <pathelement location="../../core/src/"/>
+                <fileset dir="../../core/netbeans/lib">
+            		<include name="ext/*.jar"/>
+                </fileset>             
 	</path>
     </target>
     
@@ -268,7 +276,11 @@ Microsystems, Inc. All Rights Reserved.
 	         If you need e.g. your tested module, write this:
 	           <pathelement location="${netbeans.home}/modules/somemodule.jar"/>
  	      -->
-	     <pathelement location="${netbeans.home}/lib/openide.jar"/>
+             <fileset dir="${netbeans.home}/lib">
+            		<include name="core.jar"/>
+                        <include name="openide.jar"/>
+            		<include name="ext/*.jar"/>
+             </fileset>             
    	</path>
     </target>
     
@@ -288,6 +300,10 @@ Microsystems, Inc. All Rights Reserved.
  	      -->
                 <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../netbeans/lib/openide.jar"/>
+                <fileset dir="../../core/netbeans/lib">
+            		<include name="core.jar"/>
+            		<include name="ext/*.jar"/>
+                </fileset>             
     	</path>
     </target>
         
@@ -302,7 +318,11 @@ Microsystems, Inc. All Rights Reserved.
  	      -->
                 <pathelement location="../openide-13javac-workaround.jar"/>
                 <pathelement location="../src/"/>
-    	</path>
+                <pathelement location="../../core/src/"/>
+                <fileset dir="../../core/netbeans/lib">
+            		<include name="ext/*.jar"/>
+                </fileset>             
+       	</path>
     </target>
 
 
@@ -315,8 +335,12 @@ Microsystems, Inc. All Rights Reserved.
 	         If you need e.g. your tested module, write this:
 	           <pathelement location="${netbeans.home}/modules/somemodule.jar"/>
  	      --> 
-	     <pathelement location="${netbeans.home}/lib/openide.jar"/>
-    	</path>
+             <fileset dir="${netbeans.home}/lib">
+            		<include name="core.jar"/>
+                        <include name="openide.jar"/>
+            		<include name="ext/*.jar"/>
+             </fileset>             
+        </path>
     </target>
     
 </project>
