--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -15,31 +15,40 @@ Microsystems, Inc. All Rights Reserved.
 
 <project name="monitor" default="netbeans" basedir=".">
 
-  <property name="f4jroot" location="../../f4j_all"/>
-  <property name="nbroot" location="../../nb_all"/>
+  <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
+  <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
+  <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
+  <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
+
+  <property name="nb_root" location=".."/>
   <property name="binroot" location="../../nbextra"/>
-  <property name="license.file" location="${f4jroot}/core/release/LICENSE.txt"/>
+  <property name="homepage.base" value="netbeans.org"/>
+  <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
+  <property name="license.file" value="../nbbuild/bcl-license.txt"/>
+  <property name="nbm_alias" value="nb_ide"/>
+  <property name="storepass" value="?"/>
+
   <property name="servlet22" 
      location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/>
   <property name="servlet23" 
      location="${binroot}/web/servletapi23/release/modules/ext/servlet-2.3.jar"/>
-  <property name="schema2beans" 
-     location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
 
-  <property name="catalina" 
-     location="extra/catalina.jar"/>
-
-  <taskdef name="jhindexer" 
-           classname="org.netbeans.nbbuild.JHIndexer"
-           classpath="${nbroot}/nbbuild/nbantext.jar"/>
-
-  <taskdef name="makenbm" 
-           classname="org.netbeans.nbbuild.MakeNBM" 
-           classpath="${nbroot}/nbbuild/nbantext.jar"/>
-
-  <taskdef name="locjar"
-           classname="org.netbeans.nbbuild.LocalizedJar" 
-           classpath="${nbroot}/nbbuild/nbantext.jar"/>
+  <target name="setup-jdkhome-1">
+    <!-- Note: user-configured -Djavahome=... will always override this: -->
+    <property name="javahome" location="${java.home}"/>
+    <available property="javahome-valid" file="${javahome}/lib/tools.jar"/>
+  </target>
+  <target name="setup-jdkhome-2" depends="setup-jdkhome-1" if="javahome-valid">
+    <property name="jdkhome" value="${javahome}"/>
+    <property name="jdkhome-valid" value="true"/>
+  </target>
+  <target name="setup-jdkhome-3" depends="setup-jdkhome-1" unless="javahome-valid">
+    <property name="jdkhome" location="${javahome}/.."/>
+    <available property="jdkhome-valid" file="${jdkhome}/lib/tools.jar"/>
+  </target>
+  <target name="setup-jdkhome" depends="setup-jdkhome-2,setup-jdkhome-3" unless="jdkhome-valid">
+    <fail message="No tools.jar found in ${javahome}! Set -Djavahome=... as needed."/>
+  </target>
 
   <!-- These are the primary targets. -->
 
@@ -49,11 +58,10 @@ Microsystems, Inc. All Rights Reserved.
     <makenbm file="monitor.nbm"
              topdir="."
 	     module="netbeans/modules/monitor.jar"
-	     homepage="http://${homepage.base}/monitor.html"
+	     homepage="http://monitor.${homepage.base}/"
 	     distribution="${dist.base}/monitor.nbm">
       <license file="${license.file}" />
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
-      <exclude name="**/nondist/**" />
     </makenbm>
   </target>
 
@@ -61,7 +69,6 @@ Microsystems, Inc. All Rights Reserved.
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
-        <include name="**/*.jar"/>
       </fileset>
     </delete>
     <delete dir="netbeans"/>
@@ -69,6 +76,7 @@ Microsystems, Inc. All Rights Reserved.
    <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/JavaHelpSearch2"/>
    <delete dir="javahelp/org/netbeans/modules/web/monitor/docs/ja/JavaHelpSearch2"/>
    <delete file="monitor.nbm"/>	
+   <delete file="manifest-subst.mf"/>	
   </target>
 
   <!-- These are the secondary targets. -->
@@ -94,38 +102,37 @@ Microsystems, Inc. All Rights Reserved.
     <mkdir dir="netbeans/modules/docs"/>
     <locjar jarfile="netbeans/modules/docs/monitor.jar"
             compress="true">
-      <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
+      <fileset dir="javahelp" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
       <locale name="ja"/>
     </locjar>
   </target>
 
   <target name="release">
-    <copy todir="netbeans">
-      <fileset dir="release"/>
-    </copy>
   </target>
 
 
   <target name="compile"
-	  depends="compile-view, compile-core, compile-server,
+	  depends="setup-jdkhome, compile-view, compile-core, compile-server,
 		   compile-tomcat, compile-catalina"/>
 
   <!-- If this is compiled with the rest of the core, it fails to find 
        openide.jar in the classpath for some reason --> 
    <target name="compile-view">
+<!--
     <javac srcdir="src" destdir="src"
        deprecation="${build.compiler.deprecation}" 
        debug="${build.compiler.debug}"
        includes="org/netbeans/modules/web/monitor/client/TransactionView.java">
        <classpath>
-         <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
-         <pathelement location="${nbroot}/httpserver/netbeans/modules/httpserver.jar"/>
-         <pathelement location="${nbroot}/web/core/netbeans/modules/jsp.jar"/>
+         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
+         <pathelement location="${nb_root}/httpserver/netbeans/modules/httpserver.jar"/>
+         <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
          <pathelement location="${servlet22}"/> 
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
-         <pathelement location="${schema2beans}"/>
+         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
       </classpath>
      </javac>
+-->
   </target>
 
   <target name="compile-core" depends="compile-view">
@@ -136,11 +143,12 @@ Microsystems, Inc. All Rights Reserved.
        excludes="**/SCCS/**, **/CVS/**, **/TransactionView.java">
 
        <classpath>
-         <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
-         <pathelement location="${nbroot}/httpserver/netbeans/modules/httpserver.jar"/>
-         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
+         <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
+         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
+         <pathelement location="${nb_root}/httpserver/netbeans/modules/httpserver.jar"/>
+         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="${servlet22}"/>
-         <pathelement location="${nbroot}/web/core/netbeans/modules/jsp.jar"/>
+         <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
        </classpath>
      </javac>
   </target>
@@ -154,7 +162,7 @@ Microsystems, Inc. All Rights Reserved.
 
        <classpath>
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
-         <pathelement location="${schema2beans}"/>
+         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="${servlet23}"/>	
        </classpath>
      </javac>
@@ -171,27 +179,32 @@ Microsystems, Inc. All Rights Reserved.
        <classpath>
           <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
          <pathelement location="${servlet23}"/>		
-         <pathelement location="${nbroot}/schema2beans/netbeans/modules/schema2beans.jar"/>
+         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
        </classpath>
      </javac>
   </target>
 
+  <target name="compile-catalina-check">
+    <available property="have-catalina" file="${nb_root}/tomcatint/tomcat40/netbeans/tomcat401/server/lib/catalina.jar"/>
+  </target>
 
-  <target name="compile-catalina" depends="compile-server">
+  <target name="compile-catalina" if="have-catalina" depends="compile-server,compile-catalina-check">
 
     <javac srcdir="src" destdir="src"
          deprecation="${build.compiler.deprecation}" 
 	 debug="${build.compiler.debug}"
-	 includes="**/monitor/catalina/**"
-	 excludes="**/SCCS/**,**/CVS/**">
+	 includes="**/monitor/catalina/**">
        <classpath>
           <pathelement location="${servlet23}"/>
-          <pathelement location="extra/catalina.jar"/> 
+          <pathelement location="${nb_root}/tomcatint/tomcat40/netbeans/tomcat401/server/lib/catalina.jar"/> 
        </classpath>
      </javac>
   </target>
 
-  <target name="jars" depends="compile,tomcat-monitor">
+  <target name="jars" depends="compile,module-jars,catalina-jar,tomcat-monitor">
+  </target>
+
+  <target name="module-jars">
     <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf"
@@ -201,11 +214,8 @@ Microsystems, Inc. All Rights Reserved.
          manifest="manifest-subst.mf"
          compress="false">
       <locale name="ja"/>
-      <branding name="f4j"/>
-      <branding name="f4j_ce"/>
-      <branding name="f4j_ie"/>
       <fileset dir="src">
-        <patternset excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt">
+        <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
           <include name="org/netbeans/modules/web/monitor/client/"/>
           <include name="org/netbeans/modules/web/monitor/data/"/>
           <include name="org/netbeans/modules/web/monitor/MonitorModule**"/>
@@ -218,24 +228,27 @@ Microsystems, Inc. All Rights Reserved.
  <!-- NOTE: this is not an IDE module. It is deployed on the execution 
       server. It will not be deployed correctly if we build a separate 
       version for another language --> 
+    <mkdir dir="netbeans/modules/ext"/>
     <jar jarfile="netbeans/modules/ext/httpmonitor.jar"
          compress="false">
 	<fileset dir="src">
-        <patternset excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt">
+        <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
 	  <include name="org/netbeans/modules/web/monitor/server/"/>
           <include name="org/netbeans/modules/web/monitor/data/"/>
           <include name="org/netbeans/modules/web/monitor/catalina/MonitorUtil**"/>	
         </patternset>
       </fileset>
     </jar>
+  </target>
 
+  <target name="catalina-jar" if="have-catalina">
  <!-- NOTE: this is not an IDE module. It is deployed on the execution 
       server. It will not be deployed correctly if we build a separate 
       version for another language --> 
   <jar jarfile="netbeans/modules/ext/monitor-valve.jar"
          compress="false">
       <fileset dir="src">
-        <patternset excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt">
+        <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
           <include name="org/netbeans/modules/web/monitor/catalina/MonitorValve**"/>	
         </patternset>
       </fileset>
@@ -249,7 +262,7 @@ Microsystems, Inc. All Rights Reserved.
             compress="false">
       <locale name="ja"/>
       <fileset dir="src">
-        <patternset excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt">
+        <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
           <include name="org/apache/tomcat/core/"/>
           <include name="org/netbeans/modules/web/monitor/data/"/>
           <include name="org/netbeans/modules/web/monitor/server/"/>
@@ -258,8 +271,6 @@ Microsystems, Inc. All Rights Reserved.
       </fileset>
     </locjar>
   </target>
-
-
 
 </project>
 
