--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -88,22 +88,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="javahelp">
-<!-- It is a part of core module now
-        <mkdir dir="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"/>
-        <jhindexer basedir="javahelp/org/netbeans/modules/xml/catalog/docs/"
-                   db="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"
-                   jhall="${binroot}/nbbuild/lib/jhall.jar">
-            <include name="**/*.html"/>
-            <exclude name="JavaHelpSearch/"/>
-        </jhindexer>
-
-        <mkdir dir="netbeans/modules/docs"/>
-        <locjar jarfile="netbeans/modules/docs/xml-catalog.jar"
-                compress="true">
-            <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
-            <locale name="ja"/>
-        </locjar>
--->	
+        <!-- It is a part of core module now. -->
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
@@ -119,7 +104,6 @@ Microsystems, Inc. All Rights Reserved.
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
         <jar jarfile="test/xml-catalog-test.jar" manifest="manifest-subst.mf" compress="false">
             <fileset dir="src" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
-            <fileset dir="javahelp" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
         </jar>
         <nbinstaller module="test/xml-catalog-test.jar" action="reinstall"/>
     </target>
@@ -146,7 +130,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-catalog-${release}.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
-        <delete dir="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"/>
 
         <for-each locations="compat"/>
     </target>
