--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -90,22 +90,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="javahelp">
-<!-- It is a part of core now
-        <mkdir dir="javahelp/org/netbeans/modules/xml/text/docs/JavaHelpSearch"/>
-        <jhindexer basedir="javahelp/org/netbeans/modules/xml/text/docs/"
-                   db="javahelp/org/netbeans/modules/xml/text/docs/JavaHelpSearch"
-                   jhall="${binroot}/nbbuild/lib/jhall.jar">
-            <include name="**/*.html"/>
-            <exclude name="JavaHelpSearch/"/>
-        </jhindexer>
-
-        <mkdir dir="netbeans/modules/docs"/>
-        <locjar jarfile="netbeans/modules/docs/xml-text-edit.jar"
-                compress="true">
-            <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
-            <locale name="ja"/>
-        </locjar>
--->
+        <!-- It is a part of core module now. -->
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
@@ -121,7 +106,6 @@ Microsystems, Inc. All Rights Reserved.
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
         <jar jarfile="test/xml-text-test.jar" manifest="manifest-subst.mf" compress="false">
             <fileset dir="src" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
-<!--            <fileset dir="javahelp" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>-->
         </jar>
         <nbinstaller module="test/xml-text-test.jar" action="reinstall"/>
     </target>
@@ -149,7 +133,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-text-edit-${release}.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
-        <delete dir="javahelp/org/netbeans/modules/xml/text/docs/JavaHelpSearch"/>
 
         <for-each locations="compat"/>
     </target>
