--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -86,22 +86,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="javahelp">
-<!-- It is a part of core now    
-        <mkdir dir="javahelp/org/netbeans/modules/xml/tools/docs/JavaHelpSearch"/>
-        <jhindexer basedir="javahelp/org/netbeans/modules/xml/tools/docs/"
-                   db="javahelp/org/netbeans/modules/xml/tools/docs/JavaHelpSearch"
-                   jhall="${binroot}/nbbuild/lib/jhall.jar">
-            <include name="**/*.html"/>
-            <exclude name="JavaHelpSearch/"/>
-        </jhindexer>
-
-        <mkdir dir="netbeans/modules/docs"/>
-        <locjar jarfile="netbeans/modules/docs/xml-tools.jar"
-                compress="true">
-            <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
-            <locale name="ja"/>
-        </locjar>
--->	
+        <!-- It is a part of core module now. -->
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
@@ -117,7 +102,6 @@ Microsystems, Inc. All Rights Reserved.
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
         <jar jarfile="test/xml-tools-test.jar" manifest="manifest-subst.mf" compress="false">
             <fileset dir="src" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
-            <fileset dir="javahelp" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
         </jar>
         <nbinstaller module="test/xml-tools-test.jar" action="reinstall"/>
     </target>
@@ -145,7 +129,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-tools-${release}.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
-        <delete dir="javahelp/org/netbeans/modules/xml/tools/docs/JavaHelpSearch"/>
     </target>
 
     <target name="real-clean" depends="clean">
