Package name translation moved from openide to module (#20417)

--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -75,6 +75,7 @@ Microsystems, Inc. All Rights Reserved.
 	    excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"
 	    compress="false">
       <include name="org/netbeans/modules/web/"/>
+      <include name="META-INF/"/>
       <locale name="ja"/>
     </locjar>
   </target>
