Issue #17674 ...FIXED> no way of turning off tool tips

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -89,6 +89,8 @@ CTL_IDESettings=System Settings
 #IDESettingsBeanInfo
 PROP_LOOK_AND_FEEL=Look&Feel
 HINT_LOOK_AND_FEEL=Sets the Swing Look & Feel of the IDE.
+PROP_SHOW_TOOLTIPS_IN_IDE=Show Tool Tips In IDE
+HINT_SHOW_TOOLTIPS_IN_IDE=If True, Tool Tips are displayed in the IDE.
 PROP_SHOW_TIPS_ON_STARTUP=Show Tips on Startup
 HINT_SHOW_TIPS_ON_STARTUP=If True, a tip of the day is displayed when the IDE starts.
 PROP_BEANINFO_SEARCH_PATH=BeanInfo Search Path
