changed file names

--- a/xtest/examples/MyModule/test/databases.properties
+++ b/xtest/examples/MyModule/test/databases.properties
@@ -31,6 +31,11 @@ xtest.userdata(pointbase)|username=public
 xtest.userdata(pointbase)|password=public
 
 # Path to jdbcdrivers directory (used in site-specific-build.xml)
-jdbc.drivers.path=<your-path-to-drivers>
+jdbc.drivers.path=
 # list of archives to be included to classpath (used in site-specific-build.xml)
-jdbc.drivers.jars=classes12_817.zip;mssqlserver4v70rel510.zip;pbclient41ev.jar
+jdbc.drivers.jars=pbclient41ECF169.jar
+
+
+
+
+
